@@ -33,6 +33,7 @@ import org.eclipse.sirius.components.diagrams.FreeFormLayoutStrategy;
 import org.eclipse.sirius.components.diagrams.INodeStyle;
 import org.eclipse.sirius.components.diagrams.ImageNodeStyle;
 import org.eclipse.sirius.components.diagrams.InsideLabel;
+import org.eclipse.sirius.components.diagrams.InsideLabelLocation;
 import org.eclipse.sirius.components.diagrams.LabelStyle;
 import org.eclipse.sirius.components.diagrams.LineStyle;
 import org.eclipse.sirius.components.diagrams.Node;
@@ -101,6 +102,7 @@ public class DeleteViewOperationHandlerTests {
                 .insideLabel(InsideLabel.newLabel(UUID.randomUUID().toString())
                         .type("Label")
                         .text(OperationTestContext.ROOT_PACKAGE_NAME)
+                        .insideLabelLocation(InsideLabelLocation.TOP_CENTER)
                         .position(Position.at(0, 0))
                         .size(Size.of(10, 10))
                         .alignment(Position.at(0, 0))
